# justbytes

./: .gitignore  .isort.cfg  .travis.yml  CHANGES.txt  MANIFEST.in  Makefile  README.md  README.rst  check.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  weekly.yml
doc/: Makefile  conf.py  design.ep  index.rst  tutorial.rst
src/justbytes/: __init__.py  _config.py  _constants.py  _errors.py  _generators.py  _size.py  _sizes.py  _types.py  version.py
src/justbytes/_util/: display.py  generators.py  math_util.py  misc.py
tests/: CHANGES.txt  __init__.py  config_test.py  constants_test.py  display_test.py  errors_test.py  sizes_test.py  test_config.py  test_constants.py  test_util.py  test_version.py  util_test.py  utils.py  version_test.py
tests/size/: conversions_test.py  initializer_test.py  named_test.py  operations_test.py  size_test.py  test_conversions.py  test_initializer.py  test_named.py  test_operations.py
tests/test_deterministic/: test_config.py  test_constants.py  test_errors.py  test_version.py
tests/test_deterministic/test_size/: test_conversions.py  test_initializer.py  test_named.py  test_operations.py  test_size.py
tests/test_hypothesis/: test_config.py  test_constants.py  test_util.py
tests/test_hypothesis/test_size/: __init__.py  test_conversions.py  test_initializer.py  test_named.py  test_operations.py  utils.py
