[metadata]
name = justbytes
author = Anne Mulhern
author_email = amulhern@redhat.com
url = https://github.com/mulkieran/justbytes
description = "computing with and displaying bytes"
license = LGPL-2.1-or-later
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: justbytes.version.__version__
platforms =
  Linux
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Developers
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Software Development :: Libraries
  Topic :: System :: Hardware
  Topic :: System :: Operating System Kernels :: Linux

[options]
install_requires =
  justbases>=0.13

package_dir =
  =src

packages =
  justbytes
